Fix z-index so done button doesn't order behind display and become unclickable

--- a/src/client/components/Menu/menu.scss
+++ b/src/client/components/Menu/menu.scss
@@ -7,7 +7,7 @@ $menu-height-5: 100;
 
 #menu-container {
   position: absolute;
-  z-index: 0;
+  z-index: 2;
   top: 0;
   left: 0;
   height: #{$menu-height-1 - 10px};
